src/corelib/tools/qmap.h
@@ -208,8 +208,11 @@ struct QMapData : public QMapDataBase
 
     // using reinterpret_cast because QMapDataBase::header is not
     // actually a QMapNode.
+QT_WARNING_PUSH
+QT_WARNING_DISABLE_GCC("-Wstrict-aliasing")
     const Node *end() const { return reinterpret_cast<const Node *>(&header); }
     Node *end() { return reinterpret_cast<Node *>(&header); }
+QT_WARNING_POP
     const Node *begin() const { if (root()) return static_cast<const Node*>(mostLeftNode); return end(); }
     Node *begin() { if (root()) return static_cast<Node*>(mostLeftNode); return end(); }
 
